unpackaged/main/default/objects/Opportunity_Offer__c/fields/Plans_Attached__c.field-meta.xml
<CustomField>
    <fullName>Plans_Attached__c</fullName>
    <label>Plans Attached</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO - Cannot Provide Quote At This Stage, Must Have Plans</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>