unpackaged/main/default/objects/Opportunity_Offer__c/fields/Plant_Rooms__c.field-meta.xml
<CustomField>
    <fullName>Plant_Rooms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Plant Rooms</label>
    <type>Checkbox</type>
</CustomField>