unpackaged/main/default/objects/Opportunity_Offer__c/fields/Planter_Boxes__c.field-meta.xml
<CustomField>
    <fullName>Planter_Boxes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Planter Boxes</label>
    <type>Checkbox</type>
</CustomField>