unpackaged/main/default/objects/Opportunity_Offer__c/fields/Podium_Plaza_Decks_and_Terraces__c.field-meta.xml
<CustomField>
    <fullName>Podium_Plaza_Decks_and_Terraces__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Podium / Plaza Decks and Terraces</label>
    <type>Checkbox</type>
</CustomField>