unpackaged/main/default/objects/Opportunity_Offer__c/fields/Polywrap_to_Frames__c.field-meta.xml
<CustomField>
    <fullName>Polywrap_to_Frames__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Polywrap to Frames</label>
    <type>Checkbox</type>
</CustomField>