unpackaged/main/default/objects/Opportunity_Offer__c/fields/Ponds_Water_Features__c.field-meta.xml
<CustomField>
    <fullName>Ponds_Water_Features__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ponds / Water Features</label>
    <type>Checkbox</type>
</CustomField>