unpackaged/main/default/objects/Opportunity_Offer__c/fields/Pool_Decks__c.field-meta.xml
<CustomField>
    <fullName>Pool_Decks__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pool Decks</label>
    <type>Checkbox</type>
</CustomField>