unpackaged/main/default/objects/Opportunity_Offer__c/fields/Power_Supply_available__c.field-meta.xml
<CustomField>
    <fullName>Power_Supply_available__c</fullName>
    <label>Power Supply available</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single Phase</fullName>
            </value>
            <value>
                <fullName>Three Phase</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>