unpackaged/main/default/objects/Opportunity_Offer__c/fields/Product_Selection__c.field-meta.xml
<CustomField>
    <fullName>Product_Selection__c</fullName>
    <label>Product Selection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AAC-Nasahi Panel</fullName>
            </value>
            <value>
                <fullName>AAC-Nasahi Panel &amp; Render</fullName>
            </value>
            <value>
                <fullName>AAC-Nasachi panel</fullName>
                <isActive>false</isActive>
                <label>AAC-Nasachi panel</label>
            </value>
            <value>
                <fullName>AAC-Nasachi panel &amp; Render</fullName>
                <isActive>false</isActive>
                <label>AAC-Nasachi panel &amp; Render</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>