unpackaged/main/default/objects/Opportunity_Offer__c/fields/Product_Selection_Cladding__c.field-meta.xml
<CustomField>
    <fullName>Product_Selection_Cladding__c</fullName>
    <label>Product Selection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cladding</fullName>
            </value>
            <value>
                <fullName>Cladding &amp; Render</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>