unpackaged/main/default/objects/Opportunity_Offer__c/fields/Product_Specifications__c.field-meta.xml
<CustomField>
    <fullName>Product_Specifications__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product Specifications</label>
    <type>Checkbox</type>
</CustomField>