unpackaged/main/default/objects/Opportunity_Offer__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Render &amp; Texture</fullName>
            </value>
            <value>
                <fullName>Fibre Cement</fullName>
            </value>
            <value>
                <fullName>Hebel</fullName>
            </value>
            <value>
                <fullName>Loxo</fullName>
            </value>
            <value>
                <fullName>Exsulite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>