unpackaged/main/default/objects/Opportunity_Offer__c/fields/Profile__c.field-meta.xml
<CustomField>
    <fullName>Profile__c</fullName>
    <label>Profile</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Garage_Door_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ranch (Standard Sectional - Steel)</fullName>
            </value>
            <value>
                <fullName>Heritage (Standard Sectional - Steel)</fullName>
            </value>
            <value>
                <fullName>Slimline (Standard Sectional - Steel)</fullName>
            </value>
            <value>
                <fullName>Glacier (Standard Sectional - Steel)</fullName>
            </value>
            <value>
                <fullName>Flatline (Standard Sectional - Steel)</fullName>
            </value>
            <value>
                <fullName>Fineline (Standard Sectional - Steel)</fullName>
            </value>
            <value>
                <fullName>Ribline (Standard Sectional - Steel)</fullName>
            </value>
            <value>
                <fullName>Stanford (Standard Sectional - Steel)</fullName>
            </value>
            <value>
                <fullName>Acrylic (Aluminium Sectional)</fullName>
            </value>
            <value>
                <fullName>Composite (Aluminium Sectional)</fullName>
            </value>
            <value>
                <fullName>Standard Roller Door (Steel)</fullName>
            </value>
            <value>
                <fullName>Bar</fullName>
            </value>
            <value>
                <fullName>Louvre</fullName>
            </value>
            <value>
                <fullName>Amplimesh</fullName>
            </value>
            <value>
                <fullName>Perspex</fullName>
            </value>
            <value>
                <fullName>Perforated</fullName>
            </value>
            <value>
                <fullName>75mm (Steel roller shutter)</fullName>
            </value>
            <value>
                <fullName>100mm  (Steel roller shutter)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>