unpackaged/main/default/objects/Opportunity_Offer__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Opportunity Offers</relationshipLabel>
    <relationshipName>Opportunity_Offers</relationshipName>
    <type>Lookup</type>
</CustomField>