unpackaged/main/default/objects/Opportunity_Offer__c/fields/Project_Finish_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Project_Finish_Schedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Project Finish Schedule</label>
    <type>Checkbox</type>
</CustomField>