unpackaged/main/default/objects/Opportunity_Offer__c/fields/Project_Link_Passwords__c.field-meta.xml
<CustomField>
    <fullName>Project_Link_Passwords__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Project Link Passwords</label>
    <type>Checkbox</type>
</CustomField>