unpackaged/main/default/objects/Opportunity_Offer__c/fields/QTY_for_Additional_Remotes__c.field-meta.xml
<CustomField>
    <fullName>QTY_for_Additional_Remotes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QTY for Additional Remotes</label>
    <type>Checkbox</type>
</CustomField>