unpackaged/main/default/objects/Opportunity_Offer__c/fields/Quantity_Front_Return__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Front_Return__c</fullName>
    <label>Quantity - Front &amp; Return</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>