unpackaged/main/default/objects/Opportunity_Offer__c/fields/Quantity_Garage_Door__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Garage_Door__c</fullName>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>