unpackaged/main/default/objects/Opportunity_Offer__c/fields/Quantity_Splade__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Splade__c</fullName>
    <label>Quantity - Splade</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>