unpackaged/main/default/objects/Opportunity_Offer__c/fields/Quick_options__c.field-meta.xml
<CustomField>
    <fullName>Quick_options__c</fullName>
    <label>Quick options</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pine &amp; MDF stair for paint and carpet</fullName>
            </value>
            <value>
                <fullName>Pine &amp; MDF stair for paint and overlayed flooring</fullName>
            </value>
            <value>
                <fullName>Flooded Gum stair for polish</fullName>
            </value>
            <value>
                <fullName>European Beech stair for polish</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>