unpackaged/main/default/objects/Opportunity_Offer__c/fields/Quote_All_Relevant_Products__c.field-meta.xml
<CustomField>
    <fullName>Quote_All_Relevant_Products__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quote All Relevant Products</label>
    <type>Checkbox</type>
</CustomField>