unpackaged/main/default/objects/Opportunity_Offer__c/fields/Render_M2__c.field-meta.xml
<CustomField>
    <fullName>Render_M2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Render M2</label>
    <type>Checkbox</type>
</CustomField>