unpackaged/main/default/objects/Opportunity_Offer__c/fields/Required_Render_Finishes__c.field-meta.xml
<CustomField>
    <fullName>Required_Render_Finishes__c</fullName>
    <label>Required Render Finishes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approx. Render M2</fullName>
            </value>
            <value>
                <fullName>Approx. Paint M2</fullName>
            </value>
            <value>
                <fullName>Other M2</fullName>
            </value>
            <value>
                <fullName>Specialty Finishes M2</fullName>
            </value>
            <value>
                <fullName>Cladding - Dulux Exsulite System</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>