unpackaged/main/default/objects/Opportunity_Offer__c/fields/Required_Render_Finishes_M2__c.field-meta.xml
<CustomField>
    <fullName>Required_Render_Finishes_M2__c</fullName>
    <label>Required Render Finishes - M2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>