unpackaged/main/default/objects/Opportunity_Offer__c/fields/Required_Render_Finishes_Other__c.field-meta.xml
<CustomField>
    <fullName>Required_Render_Finishes_Other__c</fullName>
    <label>Required Render Finishes - Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>