unpackaged/main/default/objects/Opportunity_Offer__c/fields/Requirement_Type__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Type__c</fullName>
    <label>Requirement Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Waterproofing</fullName>
            </value>
            <value>
                <fullName>Sealing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>