unpackaged/main/default/objects/Opportunity_Offer__c/fields/Retaining_Walls__c.field-meta.xml
<CustomField>
    <fullName>Retaining_Walls__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retaining Walls</label>
    <type>Checkbox</type>
</CustomField>