unpackaged/main/default/objects/Opportunity_Offer__c/fields/Return_Air_Grill_Type__c.field-meta.xml
<CustomField>
    <fullName>Return_Air_Grill_Type__c</fullName>
    <label>Return Air Grill Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Plastic Grille Filtered</fullName>
            </value>
            <value>
                <fullName>Plastic Grille Plain</fullName>
            </value>
            <value>
                <fullName>Egg Crate Filtered</fullName>
            </value>
            <value>
                <fullName>Egg Crate Plain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>