unpackaged/main/default/objects/Opportunity_Offer__c/fields/Return_Air_position__c.field-meta.xml
<CustomField>
    <fullName>Return_Air_position__c</fullName>
    <label>Return Air position</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Floor</fullName>
            </value>
            <value>
                <fullName>Ceiling</fullName>
            </value>
            <value>
                <fullName>Wall</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>