unpackaged/main/default/objects/Opportunity_Offer__c/fields/Return_Format__c.field-meta.xml
<CustomField>
    <fullName>Return_Format__c</fullName>
    <label>Return Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Break Down Not Required</fullName>
            </value>
            <value>
                <fullName>Break Down by Unit / House Individually</fullName>
            </value>
            <value>
                <fullName>Break Down by Type Only</fullName>
            </value>
            <value>
                <fullName>See Notes</fullName>
            </value>
            <value>
                <fullName>NO - Break Down Not Required</fullName>
                <isActive>false</isActive>
                <label>NO - Break Down Not Required</label>
            </value>
            <value>
                <fullName>YES - Break Down by Type Only</fullName>
                <isActive>false</isActive>
                <label>YES - Break Down by Type Only</label>
            </value>
            <value>
                <fullName>YES - Break Down by Unit / House Individually</fullName>
                <isActive>false</isActive>
                <label>YES - Break Down by Unit / House Individually</label>
            </value>
            <value>
                <fullName>YES - See Notes</fullName>
                <isActive>false</isActive>
                <label>YES - See Notes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>