unpackaged/main/default/objects/Opportunity_Offer__c/fields/Returns_format_Other__c.field-meta.xml
<CustomField>
    <fullName>Returns_format_Other__c</fullName>
    <label>Returns format - Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>