unpackaged/main/default/objects/Opportunity_Offer__c/fields/Reveals__c.field-meta.xml
<CustomField>
    <fullName>Reveals__c</fullName>
    <label>Reveals</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hardwood</fullName>
            </value>
            <value>
                <fullName>MDF</fullName>
            </value>
            <value>
                <fullName>Primed Hwood</fullName>
            </value>
            <value>
                <fullName>Primed Pine Reveals</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>