unpackaged/main/default/objects/Opportunity_Offer__c/fields/Riser__c.field-meta.xml
<CustomField>
    <fullName>Riser__c</fullName>
    <label>Riser</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MDF</fullName>
            </value>
            <value>
                <fullName>Flooded Gum</fullName>
            </value>
            <value>
                <fullName>European Beech</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>