unpackaged/main/default/objects/Opportunity_Offer__c/fields/Roof_Type__c.field-meta.xml
<CustomField>
    <fullName>Roof_Type__c</fullName>
    <label>Roof Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tile</fullName>
            </value>
            <value>
                <fullName>Gal</fullName>
            </value>
            <value>
                <fullName>Colourbond (Color)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>