unpackaged/main/default/objects/Opportunity_Offer__c/fields/Roof_Type_Other__c.field-meta.xml
<CustomField>
    <fullName>Roof_Type_Other__c</fullName>
    <label>Roof Type - Other</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pitched and Degree</fullName>
            </value>
            <value>
                <fullName>Flat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>