unpackaged/main/default/objects/Opportunity_Offer__c/fields/Roof_Type_Pitched_and_Degree_Specified__c.field-meta.xml
<CustomField>
    <fullName>Roof_Type_Pitched_and_Degree_Specified__c</fullName>
    <label>Roof Type Pitched and Degree Specified</label>
    <length>255</length>
    <type>Text</type>
</CustomField>