unpackaged/main/default/objects/Opportunity_Offer__c/fields/Semi_frameless_Shower_Screen_Type__c.field-meta.xml
<CustomField>
    <fullName>Semi_frameless_Shower_Screen_Type__c</fullName>
    <label>Semi-frameless Shower Screen Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Semi-frameless 6mm Pivot Telescopic door</fullName>
            </value>
            <value>
                <fullName>Sliding custom semi frameless 6mm shower screen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>