unpackaged/main/default/objects/Opportunity_Offer__c/fields/SHanging_Rail__c.field-meta.xml
<CustomField>
    <fullName>SHanging_Rail__c</fullName>
    <label>SHanging Rail</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Double</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>