unpackaged/main/default/objects/Opportunity_Offer__c/fields/Shower_Screen_Style__c.field-meta.xml
<CustomField>
    <fullName>Shower_Screen_Style__c</fullName>
    <label>Shower Screen Style</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&quot;Semi-Frameless Shower Screen</fullName>
            </value>
            <value>
                <fullName>Frameless Shower Screen</fullName>
            </value>
            <value>
                <fullName>Bath Screens&quot;</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>