unpackaged/main/default/objects/Opportunity_Offer__c/fields/Showrooms__c.field-meta.xml
<CustomField>
    <fullName>Showrooms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Showrooms</label>
    <type>Checkbox</type>
</CustomField>