unpackaged/main/default/objects/Opportunity_Offer__c/fields/Skirting__c.field-meta.xml
<CustomField>
    <fullName>Skirting__c</fullName>
    <label>Skirting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Skirting On - Quad Required</fullName>
            </value>
            <value>
                <fullName>Skirting Off - Quad Required</fullName>
            </value>
            <value>
                <fullName>Skirting to be removed &amp; refit</fullName>
            </value>
            <value>
                <fullName>Skirting not required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>