unpackaged/main/default/objects/Opportunity_Offer__c/fields/Slab_Edge_Height__c.field-meta.xml
<CustomField>
    <fullName>Slab_Edge_Height__c</fullName>
    <label>Slab Edge Height</label>
    <length>255</length>
    <type>Text</type>
</CustomField>