unpackaged/main/default/objects/Opportunity_Offer__c/fields/Slab_Edge_Parging__c.field-meta.xml
<CustomField>
    <fullName>Slab_Edge_Parging__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Slab Edge Parging</label>
    <type>Checkbox</type>
</CustomField>