unpackaged/main/default/objects/Opportunity_Offer__c/fields/Slab_Rebate_Size__c.field-meta.xml
<CustomField>
    <fullName>Slab_Rebate_Size__c</fullName>
    <label>Slab Rebate Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>