unpackaged/main/default/objects/Opportunity_Offer__c/fields/Sliding_10mm_frameless_shower_screens_1__c.field-meta.xml
<CustomField>
    <fullName>Sliding_10mm_frameless_shower_screens_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sliding 10mm frameless shower screens (1</label>
    <type>Checkbox</type>
</CustomField>