unpackaged/main/default/objects/Opportunity_Offer__c/fields/Sliding_custom_semi_frameless_6mm_shower__c.field-meta.xml
<CustomField>
    <fullName>Sliding_custom_semi_frameless_6mm_shower__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sliding custom semi frameless 6mm shower</label>
    <type>Checkbox</type>
</CustomField>