unpackaged/main/default/objects/Opportunity_Offer__c/fields/Specify_Batten_Location__c.field-meta.xml
<CustomField>
    <fullName>Specify_Batten_Location__c</fullName>
    <label>Specify Batten Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>