unpackaged/main/default/objects/Opportunity_Offer__c/fields/Splade__c.field-meta.xml
<CustomField>
    <fullName>Splade__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Splade</label>
    <type>Checkbox</type>
</CustomField>