unpackaged/main/default/objects/Opportunity_Offer__c/fields/Stair_Nosing__c.field-meta.xml
<CustomField>
    <fullName>Stair_Nosing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stair Nosing</label>
    <type>Checkbox</type>
</CustomField>