unpackaged/main/default/objects/Opportunity_Offer__c/fields/Stair_Wells__c.field-meta.xml
<CustomField>
    <fullName>Stair_Wells__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stair Wells</label>
    <type>Checkbox</type>
</CustomField>