unpackaged/main/default/objects/Opportunity_Offer__c/fields/Staircase_Rail__c.field-meta.xml
<CustomField>
    <fullName>Staircase_Rail__c</fullName>
    <label>Staircase Rail</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Handrail</fullName>
            </value>
            <value>
                <fullName>Continuous top rail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>