unpackaged/main/default/objects/Opportunity_Offer__c/fields/Standard_3_Draw_Unit_standard_widths__c.field-meta.xml
<CustomField>
    <fullName>Standard_3_Draw_Unit_standard_widths__c</fullName>
    <description>Standard 3 Draw Unit - standard widths</description>
    <label>Standard 3 Draw Unit - standard widths</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>458mm</fullName>
            </value>
            <value>
                <fullName>608mm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>