unpackaged/main/default/objects/Opportunity_Offer__c/fields/Steel_stringer__c.field-meta.xml
<CustomField>
    <fullName>Steel_stringer__c</fullName>
    <label>Steel stringer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Beam</fullName>
            </value>
            <value>
                <fullName>Plate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>