unpackaged/main/default/objects/Opportunity_Offer__c/fields/Storage_Areas__c.field-meta.xml
<CustomField>
    <fullName>Storage_Areas__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Storage Areas</label>
    <type>Checkbox</type>
</CustomField>