unpackaged/main/default/objects/Opportunity_Offer__c/fields/Subfloor_Material__c.field-meta.xml
<CustomField>
    <fullName>Subfloor_Material__c</fullName>
    <label>Subfloor Material</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Concrete</fullName>
            </value>
            <value>
                <fullName>Particle Board</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>