unpackaged/main/default/objects/Opportunity_Offer__c/fields/Surface_Installing_into__c.field-meta.xml
<CustomField>
    <fullName>Surface_Installing_into__c</fullName>
    <label>Surface Installing into</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Timber</fullName>
            </value>
            <value>
                <fullName>Concrete</fullName>
            </value>
            <value>
                <fullName>Steel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>