unpackaged/main/default/objects/Opportunity_Offer__c/fields/System_Detail__c.field-meta.xml
<CustomField>
    <fullName>System_Detail__c</fullName>
    <label>System Detail</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Overhead In Ceiling</fullName>
            </value>
            <value>
                <fullName>Underfloor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>