unpackaged/main/default/objects/Opportunity_Offer__c/fields/System_Type__c.field-meta.xml
<CustomField>
    <fullName>System_Type__c</fullName>
    <label>System Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gas Ducted Heating</fullName>
            </value>
            <value>
                <fullName>Ducted Reverse Cycle (Electric/Split)</fullName>
            </value>
            <value>
                <fullName>Ducted Evaporative Cooling</fullName>
            </value>
            <value>
                <fullName>Gas Ducted with Add-On Refrige</fullName>
            </value>
            <value>
                <fullName>Hi-wall Split System</fullName>
            </value>
            <value>
                <fullName>Multi System</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>