unpackaged/main/default/objects/Opportunity_Offer__c/fields/Tactile_Ground_Surface_Indicators_TGSI__c.field-meta.xml
<CustomField>
    <fullName>Tactile_Ground_Surface_Indicators_TGSI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tactile Ground Surface Indicators (TGSI)</label>
    <type>Checkbox</type>
</CustomField>