unpackaged/main/default/objects/Opportunity_Offer__c/fields/Technical_Information__c.field-meta.xml
<CustomField>
    <fullName>Technical_Information__c</fullName>
    <label>Technical Information</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pool Fencing</fullName>
            </value>
            <value>
                <fullName>Balcony Balustrade</fullName>
            </value>
            <value>
                <fullName>Stair Balustrade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>