unpackaged/main/default/objects/Opportunity_Offer__c/fields/Timber_stringer__c.field-meta.xml
<CustomField>
    <fullName>Timber_stringer__c</fullName>
    <label>Timber stringer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Cut</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>