unpackaged/main/default/objects/Opportunity_Offer__c/fields/Top_Hat__c.field-meta.xml
<CustomField>
    <fullName>Top_Hat__c</fullName>
    <label>Top Hat</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>24mm</fullName>
            </value>
            <value>
                <fullName>35mm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>