unpackaged/main/default/objects/Opportunity_Offer__c/fields/Top_Shelf__c.field-meta.xml
<CustomField>
    <fullName>Top_Shelf__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Top Shelf</label>
    <type>Checkbox</type>
</CustomField>