unpackaged/main/default/objects/Opportunity_Offer__c/fields/Tracks__c.field-meta.xml
<CustomField>
    <fullName>Tracks__c</fullName>
    <label>Tracks</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Double</fullName>
            </value>
            <value>
                <fullName>Triple Track</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>